End of section 6

--- a/BlazorBattles/Server/appsettings.json
+++ b/BlazorBattles/Server/appsettings.json
@@ -1,6 +1,9 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection" : "Server=JUAN-PIERRE; Database=blazorbattles; Trusted_Connection=true;"
+    "DefaultConnection": "Server=JUAN-PIERRE; Database=blazorbattles; Trusted_Connection=true;"
+  },
+  "AppSettings": {
+    "Token" :  "my top secret key"
   },
   "Logging": {
     "LogLevel": {
